rendered Cart items on the checkout page

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -16,7 +16,7 @@
       <nav id="nav--bar">
         <ul class="nav-icons">
           <li><a href="index.html"><span class="secondary-color">EM</span>Shopping App</a></li>
-          <li><a href="checkout.html"><i class="fa-solid fa-cart-shopping cart-button">
+          <li><a href="index.html"><i class="fa fa-arrow-left cart-button">
           </i>
           <span class="cart-items"></span>
         </a></li>
@@ -104,12 +104,10 @@
                   <i class="fa-solid fa-cart-shopping cart-button"></i>
                 </span>
               </h4>
-              <p><a href="#">Product 1</a> <span class="price">#</span></p>
-              <p><a href="#">Product 2</a> <span class="price">#</span></p>
-              <p><a href="#">Product 3</a> <span class="price">#</span></p>
-              <p><a href="#">Product 4</a> <span class="price">#</span></p>
+              <div class="productDesc">
+              </div>
               <hr>
-              <p>Powered By: <span class="price" style="color:black"><b></b></span></p>
+              <p >Total Cost: <span class="amount price" style="color:black"><b></b></span></p>
             </div>
             <div class="col-25">
               <div class="container-2">
