--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
               >
             </li>
             <li>
-             <a href="index.html"><i class="fa-solid fa-cart-shopping cart-button">
+             <a href="checkout.html"><i class="fa-solid fa-cart-shopping cart-button">
               </i>
               <span class="cart-items"></span>
             </a>
