--- a/src/checkout.html
+++ b/src/checkout.html
@@ -28,7 +28,7 @@
         <div class="row">
           <div class="col-75">
             <div class="container">
-              <form action="/action_page.php">
+              <form action="./rewiew.html">
         
                 <div class="row">
                   <div class="col-50">
