--- a/src/detail.html
+++ b/src/detail.html
@@ -54,6 +54,7 @@
 
       </div>
       <input type="submit" value="Add to Cart" class="add-to-cart">
+      <!-- <input type="submit" value="Remove Item" class="removeItem"> -->
     </main>
     <footer>
       <div class="main-footer">
