--- a/src/checkout.html
+++ b/src/checkout.html
@@ -18,7 +18,7 @@
           <li><a href="index.html"><span class="secondary-color">EM</span>Shopping App</a></li>
           <li><a href="index.html"><i class="fa fa-arrow-left cart-button">
           </i>
-          <span class="cart-items"></span>
+          <span class="cart-items" style="display: none;"></span>
         </a></li>
         </ul>
       </nav>
